# sorafenib-model

./: .gitignore  .zenodo.json  Dockerfile  README.md  mit.txt  pyproject.toml  sorafenib_model.omex
.github/workflows/: docker.yml  python.yml
docs/: RELEASE.md
models/: sorafenib_body.md  sorafenib_body.xml  sorafenib_body_flat.md  sorafenib_body_flat.xml  sorafenib_intestine.md  sorafenib_intestine.xml  sorafenib_kidney.md  sorafenib_kidney.xml  sorafenib_liver.md  sorafenib_liver.xml  sorafenib_model.omex
release-notes/: 0.9.0.md  0.9.1.md  0.9.2.md
simulations/all/: index.html
simulations/all/Awada2005/: Awada2005_SOF100_D21.tsv  Awada2005_SOF200_D1.tsv  Awada2005_SOF200_D7.tsv  Awada2005_SOF300_D1.tsv  Awada2005_SOF300_D7.tsv  Awada2005_SOF400_D1.tsv  Awada2005_SOF600_D1.tsv
simulations/all/Bins2017/: Bins2017_SORRIF_sg_sor.tsv  Bins2017_SOR_sg.tsv  Bins2017_SOR_sor.tsv
simulations/all/Duran2007/: Duran2007.html  Duran2007.json  Duran2007_SOF200_ERL_sor.tsv  Duran2007_SOF200_sor.tsv
simulations/all/Fucile2015/: Fucile2015_sor_SOF200_6.tsv  Fucile2015_sor_SOF200_7.tsv  Fucile2015_sor_SOF200_9.tsv  Fucile2015_sor_SOF400_1_12.tsv
simulations/all/Fukudo2014/: Fukudo2014_sor_RCC_800.tsv
simulations/all/HepaticImpairmentExperiment/: HepaticImpairmentExperiment.html  HepaticImpairmentExperiment.json
simulations/all/Huang2017/: Huang2017.html
simulations/all/Huh2021/: Huh2021_sor_SYO200_P1.tsv
simulations/all/Hussaarts2020/: Hussaarts2020.html  Hussaarts2020_SOR_sg_sor.tsv
simulations/all/Mammatas2020/: Mammatas2020_sor_SOF_1000.tsv  Mammatas2020_sor_SOF_2800.tsv
simulations/all/Strumberg2005/: Strumberg2005.html
simulations/studies/: index.html
simulations/studies/Aboualfa2006/: Aboualfa2006_CPT_A.tsv
simulations/studies/Awada2005/: Awada2005.html  Awada2005_SOF100_D7.tsv  Awada2005_SOF200_D21.tsv  Awada2005_SOF300_D21.tsv  Awada2005_SOF800_D21.tsv
simulations/studies/Bins2017/: Bins2017.json  Bins2017_SOR_sg_sor.tsv
simulations/studies/Duran2007/: Duran2007_SOF400_ERL_sor.tsv
(+239 files in other folders)
